executor: E0-T09 awaiting_verification
